<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ufps_blanco_favorito"
    tools:context=".ui.home.HomeScreenActivity">

    <!-- Contenedor centrado -->
    <LinearLayout
        android:id="@+id/container_centered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- CONTENEDOR CON EL PADDING REAL (LO IMPORTANTE) -->
        <LinearLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingHorizontal="40dp">

            <!-- Imagen principal -->
            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:contentDescription="init_logo"
                android:src="@drawable/init_logo"
                android:layout_marginBottom="30dp" />

            <!-- Texto de bienvenida -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginBottom="50dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_label_home_screen_1"
                    android:textColor="@android:color/black"
                    android:textSize="40sp"
                    android:fontFamily="@font/poppins_semibold"
                    android:includeFontPadding="false" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_label_home_screen_2"
                        android:textColor="@android:color/black"
                        android:textSize="40sp"
                        android:fontFamily="@font/poppins_semibold"
                        android:includeFontPadding="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_label_home_screen_3"
                        android:textColor="@color/ufps_principal"
                        android:textSize="40sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/poppins_semibold_italic"
                        android:includeFontPadding="false" />
                </LinearLayout>
            </LinearLayout>

            <!-- Botonera -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnStart"
                    style="@style/PrincipalWhiteButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/text_button_login_home_screen"
                    app:icon="@drawable/google_icon"
                    app:iconSize="22dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnValidate"
                    style="@style/PrincipalRedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/text_button_validate_home_screen"
                    app:icon="@drawable/scan_icon"
                    app:iconSize="22dp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
